Bug 1899786: make nsParser handle event loop spinning causing OnStopRequest to run r=smaug

ChannelEventQueue guarantees ordering of OnFoo events, but doesn't make
assertions about if they can be on the event queue or not when other
OnFoo's are running.  nsParser spins the EventQueue from script, and so
can run OnStopRequest from within OnDataAvailable.

Differential Revision: https://phabricator.services.mozilla.com/D219915